Documentation on habits controller
