# app/Http/Controllers/HabitController.php
@@ -11,6 +11,25 @@ use Illuminate\Http\Request;
 
 class HabitController extends Controller
 {
+    /**
+     * @OA\Get(
+     *      path="/api/habits",
+     *      summary="List of habits",
+     *      tags={"Habits"},
+     *      @OA\Response(
+     *          response=200,
+     *          description="List of habits",
+     *          content={
+     *              @OA\MediaType(
+     *                  mediaType="application/json",
+     *                  @OA\Schema(
+     *                      @OA\Items(ref="#/components/schemas/Habit")
+     *                  )
+     *              )
+     *          }
+     *      ),
+     * )
+     */
     public function index(Request $request)
     {
         $user = $request->user()?: new User;
@@ -34,6 +53,111 @@ class HabitController extends Controller
         ]);
     }
 
+
+    /**
+     * @OA\Post(
+     *      path="/api/habits",
+     *      summary="Allows to store a new habit",
+     *      tags={"Habits"},
+     *      @OA\Parameter(
+     *           name="title",
+     *           in="query",
+     *           required=true,
+     *           description="A title to identify the habit",
+     *           @OA\Schema(
+     *                  type="string",
+     *           ),
+     *      ),
+     *      @OA\Parameter(
+     *           name="description",
+     *           in="query",
+     *           description="Additional information for the habit",
+     *           @OA\Schema(
+     *                  type="string",
+     *           ),
+     *      ),
+     *      @OA\Parameter(
+     *           name="is_counter",
+     *           in="query",
+     *           description="If the habit is complete by counting",
+     *           @OA\Schema(
+     *                  type="string",
+     *           ),
+     *      ),
+     *      @OA\Parameter(
+     *           name="counter_goal",
+     *           in="query",
+     *           description="Amount required to complete the habit",
+     *           @OA\Schema(
+     *                  type="string",
+     *           ),
+     *      ),
+     *      @OA\Parameter(
+     *           name="start",
+     *           in="query",
+     *           description="Date when the habit should be start getting tracked (YYYY-MM-DD HH:mm:ss)",
+     *           required=true,
+     *           @OA\Schema(
+     *                  type="string",
+     *           ),
+     *      ),
+     *      @OA\Parameter(
+     *           name="should_keep",
+     *           in="query",
+     *           description="If the habit its something that benefits the user",
+     *           @OA\Schema(
+     *                  type="boolean",
+     *           ),
+     *      ),
+     *      @OA\Parameter(
+     *           name="should_avoid",
+     *           in="query",
+     *           description="If the habit its something that harms the user",
+     *           @OA\Schema(
+     *                  type="boolean",
+     *           ),
+     *      ),
+     *      @OA\Parameter(
+     *           name="goal_date",
+     *           in="query",
+     *           description="Date when the habit should be completed (YYYY-MM-DD HH:mm:ss)",
+     *           required=true,
+     *           @OA\Schema(
+     *                  type="string",
+     *           ),
+     *      ),
+     *      @OA\Parameter(
+     *           name="streak_goal",
+     *           in="query",
+     *           description="What is the goal for the habit",
+     *           required=true,
+     *           @OA\Schema(
+     *                  type="integer",
+     *           ),
+     *      ),
+     *      @OA\Parameter(
+     *           name="category",
+     *           in="query",
+     *           description="",
+     *           required=true,
+     *           @OA\Schema(
+     *                  type="integer",
+     *           ),
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="The stored category",
+     *          content={
+     *              @OA\MediaType(
+     *                  mediaType="application/json",
+     *                  @OA\Schema(
+     *                      ref="#/components/schemas/Habit"
+     *                  )
+     *              )
+     *          }
+     *      ),
+     * )
+     */
     public function store(Request $request)
     {
         $user = $request->user()?: new User;
@@ -47,6 +171,110 @@ class HabitController extends Controller
         return response()->json($habit);
     }
 
+    /**
+     * @OA\Patch(
+     *      path="/api/habits",
+     *      summary="Allows to update a habit",
+     *      tags={"Habits"},
+     *      @OA\Parameter(
+     *           name="title",
+     *           in="query",
+     *           required=true,
+     *           description="A title to identify the habit",
+     *           @OA\Schema(
+     *                  type="string",
+     *           ),
+     *      ),
+     *      @OA\Parameter(
+     *           name="description",
+     *           in="query",
+     *           description="Additional information for the habit",
+     *           @OA\Schema(
+     *                  type="string",
+     *           ),
+     *      ),
+     *      @OA\Parameter(
+     *           name="is_counter",
+     *           in="query",
+     *           description="If the habit is complete by counting",
+     *           @OA\Schema(
+     *                  type="string",
+     *           ),
+     *      ),
+     *      @OA\Parameter(
+     *           name="counter_goal",
+     *           in="query",
+     *           description="Amount required to complete the habit",
+     *           @OA\Schema(
+     *                  type="string",
+     *           ),
+     *      ),
+     *      @OA\Parameter(
+     *           name="start",
+     *           in="query",
+     *           description="Date when the habit should be start getting tracked (YYYY-MM-DD HH:mm:ss)",
+     *           required=true,
+     *           @OA\Schema(
+     *                  type="string",
+     *           ),
+     *      ),
+     *      @OA\Parameter(
+     *           name="should_keep",
+     *           in="query",
+     *           description="If the habit its something that benefits the user",
+     *           @OA\Schema(
+     *                  type="boolean",
+     *           ),
+     *      ),
+     *      @OA\Parameter(
+     *           name="should_avoid",
+     *           in="query",
+     *           description="If the habit its something that harms the user",
+     *           @OA\Schema(
+     *                  type="boolean",
+     *           ),
+     *      ),
+     *      @OA\Parameter(
+     *           name="goal_date",
+     *           in="query",
+     *           description="Date when the habit should be completed (YYYY-MM-DD HH:mm:ss)",
+     *           required=true,
+     *           @OA\Schema(
+     *                  type="string",
+     *           ),
+     *      ),
+     *      @OA\Parameter(
+     *           name="streak_goal",
+     *           in="query",
+     *           description="What is the goal for the habit",
+     *           required=true,
+     *           @OA\Schema(
+     *                  type="integer",
+     *           ),
+     *      ),
+     *      @OA\Parameter(
+     *           name="category",
+     *           in="query",
+     *           description="",
+     *           required=true,
+     *           @OA\Schema(
+     *                  type="integer",
+     *           ),
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="The stored category",
+     *          content={
+     *              @OA\MediaType(
+     *                  mediaType="application/json",
+     *                  @OA\Schema(
+     *                      ref="#/components/schemas/Habit"
+     *                  )
+     *              )
+     *          }
+     *      ),
+     * )
+     */
     public function update(Request $request, Habit $habit)
     {
         if (($notOwned = $this->checkOwner($request, $habit)) !== false) {
@@ -59,6 +287,24 @@ class HabitController extends Controller
         return response()->json($habit, 200);
     }
 
+    /**
+     * @OA\Delete(
+     *      path="/api/habits",
+     *      summary="Allows to remove a habit",
+     *      tags={"Habits"},
+     *      @OA\Response(
+     *          response=204,
+     *          description="",
+     *          content={
+     *              @OA\MediaType(
+     *                  mediaType="application/json",
+     *                  @OA\Schema(
+     *                  )
+     *              )
+     *          }
+     *      ),
+     * )
+     */
     public function destroy(Request $request, Habit $habit)
     {
         if (($notOwned = $this->checkOwner($request, $habit)) !== false) {
